2013/11/05: v30
	1. Raidpanel show all rebuff now, you can send no need debuff to black list in the config menu, only debuffs that you and your team faced will be added to the list.

2013/10/20: v29
	1. New Dead panel added to the RaidPanel, only show the dead players in the raid(party), default deactivated. Also a menu added to support it.

2013/10/19: v28
	1. You can choose using class color or not for the raid panel.
	2. You can choose filter for the raid panel on the menu.

2013/10/14: v27
	1. Using SetVertexColor instead of SetTexture for shadow background, greatly reduce the memory increment.

2013/09/16：v26
	1. New heal abosrb indicator for the raid panel(need v49 IGAS lib) .
	2. New size settings for the raid panel, you can find them in the menu of the raid panel.

2013/08/03: v25
	1. Improve the display for the debuff panel on the target's nameplate.

2013/08/03: v24
	1. A debuff panel should be shown on the target's nameplates, to reduce cost, only for target now. The size and alpha settings can be found in IGAS_UI.Definition.lua, TARGET_DEBUFF_SIZE is used to set the icon's size, and TARGET_DEBUFF_MAX_ALPHA_LIMIT is used to set the time limit when the icon's alpha should be max (the value 1).

2013/07/26: v23-2
	1. Pet panel's location can be changed by the menu.

2013/07/25: v23
	1. Update for IGAS v42. With the new group system provided by IGAS, the raid panel and pet panel's grouping and sorting should work well during combat.
	2. Pet panel is moved to the bottom of the raid panel, all can be activated or deactived, more settings for pet panel is added.

2013/07/14: v22
	1. Update for IGAS v41.
	2. More settings for the RaidPanel, you can see the detail on the menu of the RaidPanel.

2013/06/27: v21
    1. Update for IGAS v39.
    2. Load/Save settings command added for the action bar.