@@ -1,7 +1,7 @@
 ## Interface: 50400
 ## Title: IGAS_UI
 ## Author: kurapica.igas@gmail.com
-## Version: v30
+## Version: v31
 ## Notes: UI demo for IGAS
 ## eMail: kurapica.igas@gmail.com
 ## URL: http://github.com/kurapica
