@@ -3,18 +3,27 @@
 L["ChangeLog"] = [[
 <html>
 <body>
-<h1>
+<p>
+<lime>2013/11/8 v31 : </lime>
+</p><br/>
+<p>
+    1. A new feature added for the raid panel, used to send debuff to black list when right-click on it, default disabled, can be enabled in the "Element Settings" -> "Right mouse-click send debuff to black list".
+</p><br/><p>
+    2. Debuffs in raid panel will be started from bottom-right to top-left, supported by the IGAS lib v55 which would be released in the future week.
+</p>
+<br/><br/>
+<p>
 <lime>2013/11/6 v30 : </lime>
-</h1><br/>
+</p><br/>
 <p>
     1. Lots configuration of the raid panel added to the config menu, like class color, size, group filter and etc.
 </p><br/><p>
     2. Raid panel will show all debuffs that you and your team faced, can be send to black list in the config menu : "Element Settings" -> "Debuff filter".
 </p>
 <br/><br/>
-<h1>
+<p>
 <lime>2013/10/20: v29 </lime>
-</h1><br/>
+</p><br/>
 <p>
 	1. New Dead panel added to the RaidPanel, only show the dead players in the raid(party), default deactivated. Also a menu added to support it.
 </p>
